Create Landing page before logging in

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Management</title>
+    <link rel="Stylesheet" href="/frontend/css/styles.css" />
 </head>
+
 <body>
-    <h1>Blog Management System</h1>
+    <div class="header">
+        <div class="leftsection">
+            <div class="logo">
+                <img src="/frontend/Assets/logo.jpeg" alt="BMS Logo" />
+            </div>
+            <div class="text">
+                Blog Management System
+            </div>
+        </div>
+        <div class="rightsection">
+            <div class="nav">
+                <ul>
+                    <li><a href="#about">About Us</a></li> |
+                    <li><a href="#write">Write</a></li> |
+                    <li><a href="#signin">Log In</a></li> |
+                    <li><a href="#getstarted" class="getstarted-btn">Get Started</a></li>
+                    <link rel="stylesheet"
+                        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- End for Header -->
+    <!-- Start Body -->
+    <div class="body">
+        <div class="firstsection">
+          
+            <div class="textheading">
+                  <div class="image">
+                <img src="/frontend/Assets/Learning Icon.png"/>
+            </div>
+                <h3>Read Stories & <br>
+                    Execuite Your Ideas
+                </h3>
+            </div>
+            <div class="search-btn">
+                <input type="search" placeholder="Search" />
+            </div>
+        </div>
+        <div class="secondsection">
+            <div class="textparagraph">
+               <p> A place to read, write, and deepen your understanding.</p>
+            </div>
+            <div class="secondimg">
+                <img src="/frontend/Assets/thinking_boy.png" alt="thinking_boy"/>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
