--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -49,6 +49,9 @@
             </div>
         </div>
         <div class="secondsection">
+            <div class="secondfirstimg">
+                <img src="/frontend/Assets/index_background.jpg" alt="notebook"/>
+            </div>
             <div class="textparagraph">
                <p> A place to read, write, and deepen your understanding.</p>
             </div>
