Updated Design for Landing Page

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -41,7 +41,7 @@
                 <img src="/frontend/Assets/Learning Icon.png"/>
             </div>
                 <h3>Read Stories & <br>
-                    Execuite Your Ideas
+                    Share Your Ideas
                 </h3>
             </div>
             <div class="search-btn">
