--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Management</title>
     <link rel="Stylesheet" href="/frontend/css/styles.css" />
+    <link rel="shortcut icon" href="/frontend/Assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -41,7 +42,7 @@
                 <img src="/frontend/Assets/Learning Icon.png"/>
             </div>
                 <h3>Read Stories & <br>
-                    Share Your Ideas
+                    Share Your Ideas,
                 </h3>
             </div>
             <div class="search-btn">
