--- a/frontend/htlm/login.html
+++ b/frontend/htlm/login.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Management</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Login Page</title>
+    <link rel="stylesheet" href="../css/login.css" />
 </head>
 <body>
-    <h1>Blog Management System</h1>
+    <div class="bubble bubble1"></div>
+    <div class="bubble bubble2"></div>
+    <div class="bubble bubble3"></div>
+    <div class="bubble bubble4"></div>
+    <div class="bubble bubble5"></div>
+    <div class="bubble bubble6"></div>
+    <div class="bubble bubble7"></div>
+    <div class="container">
+        <div class="logo">
+            <img src="/BMS/frontend/Assets/WhatsApp Image 2025-06-17 at 13.54.00_86d76e62.jpg" alt="Blog Website Logo" style="width:130px; height:130px; object-fit:contain; display:block; margin:0 auto;" />
+        </div>
+        <h1>Sign in to BMS</h1>
+        <div class="subtitle">Access your account and manage your blogs!</div>
+        <form>
+            <div class="input-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="you@email.com" required />
+            </div>
+            <div class="input-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Password" required />
+            </div>
+            <button class="login-btn" type="submit">Sign in</button>
+        </form>
+        <div class="forgot-row" style="justify-content:center; margin: 0 0 18px 0;">
+            <a href="#">Forgot password?</a>
+        </div>
+        <div class="divider">
+            <div class="divider-line"></div>
+            <div class="divider-text">Or continue</div>
+            <div class="divider-line"></div>
+        </div>
+        <button class="google-btn" type="button">
+            <img src="../Assets/Google__G__logo.svg.png" alt="Google logo" class="google-icon" />
+            Log in with Google
+        </button>
+        <div class="footer">
+            Don't have an account?
+            <a href="signup.html" class="signup-link">Sign Up</a>
+        </div>
+    </div>
 </body>
 </html>
