--- a/frontend/htlm/signup.html
+++ b/frontend/htlm/signup.html
@@ -16,7 +16,7 @@
   <div class="bubble bubble7"></div>
   <div class="container">
     <div class="logo">
-      <img src="/BMS/frontend/Assets/logo.jpeg" alt="Blog Website Logo" style="width:90px; height:90px; object-fit:contain; display:block; margin:0 auto;" />
+      <img src="/BMS/frontend/Assets/WhatsApp Image 2025-06-17 at 13.54.00_86d76e62.jpg" alt="Blog Website Logo" style="width:130px; height:130px; object-fit:contain; display:block; margin:0 auto;" />
     </div>
     <h1>Welcome to BMS!</h1>
     <div class="subtitle">Create your account to manage your blogs!!</div>
@@ -33,10 +33,14 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" placeholder="Password" required>
       </div>
+      <div class="input-group">
+        <label for="confirm-password">Confirm Password</label>
+        <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm Password" required>
+      </div>
       <button class="signup-btn" type="submit">SIGN UP</button>
     </form>
     <div class="link-row">
-      <a href="#">Already have an account? Login</a>
+      <a href="login.html">Already have an account? Login</a>
     </div>
     <div class="footer">
       Need help? <a href="mailto:contact@bms.com">contact@bms.com</a>
