Updated add-blog and index color theme

--- a/frontend/html/add-blog.html
+++ b/frontend/html/add-blog.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Blog Page</title>
     <link rel="stylesheet" href="/frontend/css/add-blog.css" />
+    <link rel="shortcut icon" href="/frontend/Assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <div class="header">
         <div class="leftsection">
             <div class="logo">
-                <img src="/frontend/Assets/logo.png" alt="BMS Logo" />
+                <img src="/frontend/Assets/favicon.ico" alt="BMS Logo" />
             </div>
             <div class="text">
-                Blog Management System
+                Digital Pathshala
             </div>
         </div>
         <div class="rightsection">
@@ -31,6 +32,9 @@
     </div>
 
     <div class="body">
+        <div class="topaddsection">
+            <img src="/frontend/Assets/working_boy.png" alt="Hello World"/>
+            </div>
         <div class="addsection">
             <div class="innersection">
                 <h1>Create New Blog Post</h1>
