--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -4,20 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Management</title>
+    <title>Home Page</title>
     <link rel="Stylesheet" href="/frontend/css/styles.css" />
     <link rel="shortcut icon" href="/frontend/Assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+   
 </head>
 
 <body>
     <div class="header">
         <div class="leftsection">
             <div class="logo">
-                <img src="/frontend/Assets/logo.png" alt="BMS Logo" />
+                <img src="/frontend/Assets/favicon.ico" alt="BMS Logo" />
             </div>
             <div class="text">
-                Blog Management System
+                Digital Pathshala
             </div>
         </div>
         <div class="rightsection">
