--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -16,7 +16,7 @@
     <div class="bubble bubble7"></div>
     <div class="container">
         <div class="logo">
-            <img src="/BMS/frontend/Assets/WhatsApp Image 2025-06-17 at 13.54.00_86d76e62.jpg" alt="Blog Website Logo" style="width:130px; height:130px; object-fit:contain; display:block; margin:0 auto;" />
+            <img src="/Assets/Digital Pathshala logo.jpg" alt="Blog Website Logo" style="width:130px; height:130px; object-fit:contain; display:block; margin:0 auto;" />
         </div>
         <h1>Sign in to BMS</h1>
         <div class="subtitle">Access your account and manage your blogs!</div>
@@ -40,7 +40,7 @@
             <div class="divider-line"></div>
         </div>
         <button class="google-btn" type="button">
-            <img src="../Assets/Google__G__logo.svg.png" alt="Google logo" class="google-icon" />
+            <img src="/Assets/Google logo.png" alt="Google logo" class="google-icon" />
             Log in with Google
         </button>
         <div class="footer">
