--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -16,7 +16,7 @@
   <div class="bubble bubble7"></div>
   <div class="container">
     <div class="logo">
-      <img src="/BMS/frontend/Assets/WhatsApp Image 2025-06-17 at 13.54.00_86d76e62.jpg" alt="Blog Website Logo" style="width:130px; height:130px; object-fit:contain; display:block; margin:0 auto;" />
+      <img src="/Assets/Digital Pathshala logo.jpg" alt="Blog Website Logo" style="width:130px; height:130px; object-fit:contain; display:block; margin:0 auto;" />
     </div>
     <h1>Welcome to BMS!</h1>
     <div class="subtitle">Create your account to manage your blogs!!</div>
