Updated Color Theme

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    <div class="header">
+     <div class="header">
+        <a href="/frontend/html/"> 
         <div class="leftsection">
             <div class="logo">
                 <img src="/frontend/Assets/favicon.ico" alt="BMS Logo" />
@@ -21,10 +22,12 @@
                 Digital Pathshala
             </div>
         </div>
+        </a>
         <div class="rightsection">
             <div class="nav">
                 <ul>
                     <li><a href="#about">About Us</a></li> |
+                    <li><a href="#blogs">Blogs</a></li> |
                     <li><a href="#write">Write</a></li> |
                     <li><a href="#signin">Log In</a></li> |
                     <li><a href="#getstarted" class="getstarted-btn">Get Started</a></li>
