--- a/frontend/html/add-blog.html
+++ b/frontend/html/add-blog.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div class="header">
+     <div class="header">
+        <a href="/frontend/html/"> 
         <div class="leftsection">
             <div class="logo">
                 <img src="/frontend/Assets/favicon.ico" alt="BMS Logo" />
@@ -19,13 +20,16 @@
                 Digital Pathshala
             </div>
         </div>
+        </a>
         <div class="rightsection">
             <div class="nav">
                 <ul>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#write">Write</a></li>
-                    <li><a href="#signin">Log In</a></li>
+                    <li><a href="#about">About Us</a></li> |
+                    <li><a href="#blogs">Blogs</a></li> |
+                    <li><a href="#write">Write</a></li> |
+                    <li><a href="#signin">Log In</a></li> |
                     <li><a href="#getstarted" class="getstarted-btn">Get Started</a></li>
+                    
                 </ul>
             </div>
         </div>
