--- a/frontend/html/add-blog.html
+++ b/frontend/html/add-blog.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li><a href="#about">About Us</a></li> |
                     <li><a href="#blogs">Blogs</a></li> |
-                    <li><a href="#write">Write</a></li> |
+                    <li><a href="/frontend/html/add-blog.html">Write</a></li> |
                     <li><a href="/frontend/html/login.html">Log In</a></li> |
                     <li><a href="#getstarted" class="getstarted-btn">Get Started</a></li>
                     
