--- a/frontend/html/contact.html
+++ b/frontend/html/contact.html
@@ -10,7 +10,24 @@
     <div class="logo">
         <img src="/frontend/Assets/contact.png" alt="logo">
     </div>
-    <div>Digital Pathshala</div>
+    <div class="company-info">
+        <h2 class="info-item">Digital Pathshala PVT LTD</h2>
+        <div class="info-item"><span class="info-title">Register Office</span>
+          <br> 
+          Itahari, Sunsari, Koshi Province
+        </div>
+        <div class="info-item contact-support">
+          <span class="support-main-title">Digital Pathshala Support</span>
+          <div class="support-section">
+            <span class="support-title">Chat Support</span>
+            <div class="support-line"> Contact: 9816366094</div>
+            
+            <div class="support-line email-line"> Email : digitalpathshalanp@gmail.com</div>
+          </div>
+         
+        </div>
+    </div>
+
     <h1> CONTACT US </h1>
     <div class="contact-container">
     <h2>Communicate with Us</h2>
