updated path of each member photo

--- a/frontend/html/aboutus.html
+++ b/frontend/html/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Blog Management System</title>
-    <link rel="stylesheet" href="/css/aboutus.css">
+    <link rel="stylesheet" href="/frontend/css/aboutus.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -27,37 +27,37 @@
 
         <div class="team">
             <div class="member">
-                <img src="/Assets/member-1.png" alt="Team Member 1">
+                <img src="/frontend/Assets/member-1.jpg" alt="Team Member 1">
                 <h3>Rupsagar Gautam</h3>
                 <p>Lead Developer</p>
                 <p class="member-bio">Passionate about creating intuitive user experiences and clean code architecture.</p>
             </div>
             <div class="member">
-                <img src="/Assets/member-2.jpg" alt="Team Member 2">
+                <img src="/frontend/Assets/member-2.jpg" alt="Team Member 2">
                 <h3>Sandhya Timsina</h3>
                 <p>UI/UX Designer</p>
                 <p class="member-bio">Bringing creativity and user-centered design to every project.</p>
             </div>
             <div class="member">
-                <img src="/Assets/member-3.jpg" alt="Team Member 3">
+                <img src="/frontend/Assets/member-3.jpg" alt="Team Member 3">
                 <h3>Purnima Basnet</h3>
                 <p>Backend Developer</p>
                 <p class="member-bio">Expert in scalable systems and database optimization.</p>
             </div>
             <div class="member">
-                <img src="member4.jpg" alt="Team Member 4">
+                <img src="/frontend/Assets/member-4.jpg" alt="Team Member 4">
                 <h3>Rejina Dangal</h3>
                 <p>Front-end developer</p>
                 <p class="member-bio">Helping bloggers create engaging and meaningful content.</p>
             </div>
             <div class="member">
-                <img src="member5.jpg" alt="Team Member 5">
+                <img src="/frontend/Assets/member-5.jpg" alt="Team Member 5">
                 <h3>Shraddha Mainali</h3>
                 <p>Frontend Developer</p>
                 <p class="member-bio">Crafting beautiful and responsive user interfaces.</p>
             </div>
             <div class="member">
-                <img src="member6.jpg" alt="Team Member 6">
+                <img src="/frontend/Assets/member-6.jpg" alt="Team Member 6">
                 <h3>Sudish Karki</h3>
                 <p>Backend Developer</p>
                 <p class="member-bio">Driving growth and engagement through strategic marketing.</p>
