--- a/frontend/html/contact.html
+++ b/frontend/html/contact.html
@@ -11,7 +11,7 @@
         <img src="/frontend/Assets/contact.png" alt="logo">
     </div>
     <div class="company-info">
-        <h2 class="info-item">Digital Pathshala PVT LTD</h2>
+        <h2 class="info-item">Digital Pathshala PVT. LTD.</h2>
         <div class="info-item"><span class="info-title">Register Office</span>
           <br> 
           Itahari, Sunsari, Koshi Province
