--- a/Frontend/html/blog.html
+++ b/Frontend/html/blog.html
@@ -29,7 +29,7 @@
             <img src="../assets/blog2.png.jpeg" alt="Nepal Mountains" />
             <h2>Exploring the Mountains of Nepal</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More</a>
+            <a href="#" class="read-more">Read-More</a>
           </div>
 
           <!-- Blog 3 -->
@@ -37,7 +37,7 @@
             <img src="../assets/blog3.png.jpeg" alt="HTML CSS Tips" />
             <h2>Top HTML/CSS Tips for Beginners</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More</a>
+            <a href="#" class="read-more">Read-More</a>
           </div>
 
           <!-- Blog 4 -->
@@ -45,7 +45,7 @@
             <img src="../assets/blog4.png.jpeg" alt="Self-Care Writing" />
             <h2>Self-Care Through Writing</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More</a>
+            <a href="#" class="read-more">Read-More</a>
           </div>
 
           <!-- Blog 5 -->
