--- a/Frontend/html/blog.html
+++ b/Frontend/html/blog.html
@@ -21,7 +21,7 @@
             <img src="../assets/blog1.png.jpeg" alt="AI in 2025" />
             <h2>Understanding AI in 2025</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More..</a>
+            <a href="#" class="read-more">Read More</a>
           </div>
 
           <!-- Blog 2 -->
@@ -29,7 +29,7 @@
             <img src="../assets/blog2.png.jpeg" alt="Nepal Mountains" />
             <h2>Exploring the Mountains of Nepal</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read-More..</a>
+            <a href="#" class="read-more">Read-More</a>
           </div>
 
           <!-- Blog 3 -->
@@ -37,7 +37,7 @@
             <img src="../assets/blog3.png.jpeg" alt="HTML CSS Tips" />
             <h2>Top HTML/CSS Tips for Beginners</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read-More..</a>
+            <a href="#" class="read-more">Read-More</a>
           </div>
 
           <!-- Blog 4 -->
@@ -45,7 +45,7 @@
             <img src="../assets/blog4.png.jpeg" alt="Self-Care Writing" />
             <h2>Self-Care Through Writing</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read-More..</a>
+            <a href="#" class="read-more">Read-More</a>
           </div>
 
           <!-- Blog 5 -->
@@ -53,7 +53,7 @@
             <img src="../assets/blog14.jpeg" alt="Digital Marketing" />
             <h2>Basics of Digital Marketing</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More..</a>
+            <a href="#" class="read-more">Read More</a>
           </div>
 
           <!-- Blog 6 -->
@@ -61,7 +61,7 @@
             <img src="../assets/blog6.png" alt="Blogging Platforms" />
             <h2>Best Platforms for Bloggers in 2025</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More..</a>
+            <a href="#" class="read-more">Read More</a>
           </div>
 
           <!-- Blog 7 -->
@@ -69,7 +69,7 @@
             <img src="../assets/blog7.jpeg" alt="Health and Routine" />
             <h2>Boost Your Health with Routines</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More..</a>
+            <a href="#" class="read-more">Read More</a>
           </div>
 
           <!-- Blog 8 -->
@@ -77,7 +77,7 @@
             <img src="../assets/blog8.jpeg" alt="Courses and Learning" />
             <h2>Top Free Courses to Upskill in 2025</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More..</a>
+            <a href="#" class="read-more">Read More</a>
           </div>
 
           <!-- Blog 9 -->
@@ -85,7 +85,7 @@
             <img src="../assets/blog9.jpeg" alt="Tech Career Growth" />
             <h2>Essential Skills to Boost Your Tech Career in 2025</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More..</a>
+            <a href="#" class="read-more">Read More</a>
           </div>
 
           <!-- Blog 10 -->
@@ -93,7 +93,7 @@
             <img src="../assets/blog10.jpeg" alt="Remote Work Tips" />
             <h2>How to Stay Productive While Working Remotely</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More..</a>
+            <a href="#" class="read-more">Read More</a>
           </div>
 
           <!-- Blog 11 -->
@@ -101,7 +101,7 @@
             <img src="../assets/blog11.jpeg" alt="AI Tools in 2025" />
             <h2>Top AI Tools You Should Be Using in 2025</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More..</a>
+            <a href="#" class="read-more">Read More</a>
           </div>
 
           <!-- Blog 12 -->
@@ -109,7 +109,7 @@
             <img src="../assets/blog14.jpeg" alt="Portfolio Building" />
             <h2>How to Build a Standout Portfolio as a Developer</h2>
             <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More..</a>
+            <a href="#" class="read-more">Read More</a>
           </div>
 
         </div>
