Updated the margin and padding of the entire website

--- a/frontend/html/aboutus.html
+++ b/frontend/html/aboutus.html
@@ -63,10 +63,17 @@
                 <p class="member-bio">Driving growth and engagement through strategic marketing.</p>
             </div>
             <div class="member">
-                <img src="member7.jpg" alt="Team Member 7">
+                <img src="/frontend/Assets/member-7.jpg" alt="Team Member 7">
                 <h3>Rahul Shah</h3>
                 <p>Project Manager</p>
                 <p class="member-bio">Ensuring smooth project delivery and team coordination.</p>
+            </div>
+
+            <div class="member">
+                <img src="/frontend/Assets/member-8.jpg" alt="Team Member 8">
+                <h3>Nabin Regmi</h3>
+                <p>UI/UX desginer</p>
+                <p class="member-bio">Dedicated to maintaining top-notch quality through rigorous testing and attention to detail.</p>
             </div>
 
             <div class="member">
