--- a/Frontend/html/header.html
+++ b/Frontend/html/header.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link rel="Stylesheet" href="/frontend/css/styles.css" />
-    <link rel="shortcut icon" href="/frontend/Assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="/frontend/js/script.js" defer></script>
+    <title>Document</title>
+    <link rel="stylesheet" href="/Frontend/css/header.css"/>
 </head>
-
 <body>
-     <div class="header">
+         <div class="header">
         <a href="/frontend/html/"> 
         <div class="leftsection">
             <div class="logo">
@@ -60,37 +55,7 @@
     </div>
     <div class="overlay"></div>
     <!-- End for Header -->
-    <!-- Start Body -->
-    <div class="body">
-        <div class="firstsection">
-          
-            <div class="textheading">
-                  <div class="image">
-                <img src="/frontend/Assets/Learning Icon.png"/>
-            </div>
-                <h3>Read Stories & <br>
-                    Share Your Ideas,
-                </h3>
-            </div>
-            <div class="search-btn">
-                <input type="search" placeholder="Search" />
-            </div>
-        </div>
-        <div class="secondsection">
-            <div class="secondfirstimg">
-                <img src="/frontend/Assets/index_background.jpg" alt="notebook"/>
-            </div>
-            <div class="textparagraph">
-               <p> A place to read, write, and deepen your understanding.</p>
-            </div>
-            <div class="secondimg">
-                <img src="/frontend/Assets/thinking_boy.png" alt="thinking_boy"/>
-            </div>
-        </div>
-    </div>
 
+<script src="/frontend/js/script.js"></script>
 </body>
-
-</html></body>
-
 </html>
