--- a/frontend/html/aboutus.html
+++ b/frontend/html/aboutus.html
@@ -1,25 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Blog Management System</title>
-    <link rel="stylesheet" href="/frontend/css/about.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About Us - Blog Management System</title>
+  <link rel="stylesheet" href="/frontend/css/about.css">
+  <!-- <link rel="stylesheet" href="/frontend/css/about.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
+  <style>
+    :root {
+      --text-color: #3a3a3a;
+      --div-background: #f0fff4;
+      --page-background: #faf9f6;
+      --navbar-background: #d3ffdf66;
+      --button-background: #32e67e;
+      --button-text: #faf9f6;
+      --shadow-color: rgba(0, 0, 0, 0.1);
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: var(--page-background);
+      color: var(--text-color);
+      line-height: 1.6;
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 5%;
+      background-color: var(--navbar-background);
+      box-shadow: 0 2px 10px var(--shadow-color);
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .leftsection {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    .logo img {
+      height: 60px;
+      width: auto;
+    }
+
+    .leftsection .text {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #333;
+      letter-spacing: 1.5px;
+      word-spacing: 2.5px;
+    }
+
+    .nav ul {
+      display: flex;
+      list-style: none;
+      gap: 2rem;
+      align-items: center;
+    }
+
+    .nav ul li a {
+      text-decoration: none;
+      color: #454545;
+      font-weight: bold;
+      font-size: 14px;
+      padding: 0.6rem 1rem;
+      border-radius: 4px;
+      transition: 0.3s;
+    }
+
+    .nav ul li a:hover {
+      color: var(--button-background);
+    }
+
+    .getstarted-btn {
+      background-color: #626161;
+      color: white !important;
+    }
+
+    .getstarted-btn:hover {
+      background-color: var(--button-background) !important;
+      color: #3a3a3a !important;
+    }
+
+    .hamburger {
+      display: none;
+      cursor: pointer;
+      padding: 10px;
+    }
+
+    .hamburger span {
+      display: block;
+      width: 25px;
+      height: 3px;
+      background-color: var(--text-color);
+      margin: 5px 0;
+    }
+
+    .sidebar {
+      position: fixed;
+      top: 0;
+      right: -300px;
+      width: 300px;
+      height: 100vh;
+      background-color: var(--div-background);
+      box-shadow: -2px 0 10px var(--shadow-color);
+      z-index: 1002;
+      transition: right 0.3s ease;
+      padding: 20px;
+    }
+
+    .sidebar.active {
+      right: 0;
+    }
+
+    .sidebar-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 30px;
+    }
+
+    .close-btn {
+      font-size: 30px;
+      cursor: pointer;
+      color: var(--text-color);
+    }
+
+    .sidebar-nav {
+      list-style: none;
+      padding: 0;
+    }
+
+    .sidebar-nav li {
+      margin: 15px 0;
+    }
+
+    .sidebar-nav a {
+      color: var(--text-color);
+      text-decoration: none;
+      font-size: 18px;
+      display: block;
+      padding: 10px 0;
+    }
+
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1001;
+      display: none;
+    }
+
+    .overlay.active {
+      display: block;
+    }
+
+    @media screen and (max-width: 768px) {
+      .hamburger {
+        display: block;
+      }
+
+      .rightsection {
+        display: none;
+      }
+
+      .header {
+        padding: 0.8rem 2%;
+      }
+
+      .logo img {
+        height: 50px;
+      }
+
+      .leftsection .text {
+        font-size: 1.2rem;
+      }
+    }
+
+    /* .container {
+      max-width: 1200px;
+      margin: 120px auto 0; 
+      padding: 2rem 5%;
+    } */
+  </style>
 </head>
 <body>
-    <nav class="nav">
-        <div class="nav-content">
-            <a href="index.html" class="logo">BMS</a>
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="aboutus.html">About Us</a>
-                <a href="contactus.html">Contact Us</a>
-            </div>
+  <div class="header">
+    <a href="#">
+      <div class="leftsection">
+        <div class="logo">
+          <img src="/frontend/Assets/favicon.ico" alt="BMS Logo" />
         </div>
-    </nav>
+        <div class="text">DIGITAL PATHSALA</div>
+      </div>
+    </a>
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div class="rightsection">
+      <div class="nav">
+        <ul>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#blogs">Blogs</a></li>
+          <li><a href="/static/html/add-blog.html">Write</a></li>
+          <li><a href="/static/html/login.html">Log-In</a></li>
+          <li><a href="#getstarted" class="getstarted-btn">Get Started</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="sidebar">
+    <div class="sidebar-header">
+      <div class="logo">
+        <img src="/frontend//Assets/sidebar_img.jpg" alt="BMS Logo" />
+      </div>
+      <div class="close-btn">&times;</div>
+    </div>
+    <ul class="sidebar-nav">
+      <li><a href="#about">About Us</a></li>
+      <li><a href="#blogs">Blogs</a></li>
+      <li><a href="/static/html/add-blog.html">Write</a></li>
+      <li><a href="/static/html/login.html">Log In</a></li>
+      <li><a href="#getstarted" class="getstarted-btn">Get Started</a></li>
+    </ul>
+  </div>
+  <div class="overlay"></div>
 
-    <div class="container">
+  <div class="container">
         <div class="page-header">
             <h1>About Our Team</h1>
             <p class="team-intro">Behind every great blog is a team of passionate creators. Meet the minds and hearts who make our platform come alive — a diverse group of innovators, designers, and storytellers dedicated to empowering your voice in the digital world.</p>
